文案与图片修改
1.首页焦点图
2.其它页面局部文案

--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -119,15 +119,18 @@
             <h3>维正简介</h3>
             <span>
                 <sup>PROFILE</sup>
-                <strong class="tip">全方位的知识产权战略服务</strong>
+                <strong class="tip">做一家受人尊敬的百年企业</strong>
             </span>
         </figcaption>
     </figure>
     <p class="text">
-        北京维正专利代理有限公司是维正集团下设的专业专利代理机构，是经国家知识产权局批准成立的专业知识产权服务机构。公司自成立以来，一直秉承着“提升全天下企业的核心竞争力”的发展理念，力求为广大企业提供全方位的知识产权战略服务，公司服务领域主要包括专利、商标、著作权、知识产权战略规划等等。
+        基于提升全天下企业核心竞争力这一崇高使命而成立的维正集团，自成立之初就明确肩负的行业和社会责任。全体维正人为了达成做受人尊敬的百年维正发展愿景一直兢兢业业，殚精竭虑。维正的业务不止包含专利服务、商标服务、项目申报等，现已扩展升级到维权诉讼、交易等知识产权产业链式服务。维正集团厚积薄发全力打造的傻鸟知服网在2016年已经正式上线，未来将借助这一平台实现知识产权线上服务全覆盖，为客户带去更优质的服务，以最终成果促进知识产权行业的再次变革。
     </p>
     <p class="text">
-        维正汇集各个领域的专业人才，公司已经形成庞大的专利代理人队伍，多数具有多年学术研究经验，在专利申请文件撰写、无效程序以及侵权诉讼等方面具有丰富的经验；专利工程师均为国家重点院校理工科专业出身，拥有过硬的理论基础和实践经验。众多优秀律师、商标代理人、项目工程师以及知识产权顾问，以保证全方位、多角度地为客户提供知识产权一站式服务。所涉足的客户行业领域囊括能源、通讯、基础设施、信息技术、互联网、公共建设、航空、教育、医药、零售、制造等；维正拥有广泛的客户群体，为诸多民营500强企业、上市公司以及国有企业、政府机构、国际组织提供完善的知识产权培育方案。
+        在知识产权事业发展道路上，维正人一直以高标准，严要求的工匠精神，专研专业知识，提高各方面服务水平，为客户带去最大附加值的专业服务。维正专业团队员工专业知识涵盖医药、化学、生物、通讯、能源、建筑等多个领域，且通过在工作中不断积累和学习，不断扩大专利代理人队伍。专利代理人考试100%的通过率，以数据见证维正团队的实力和水平，这一人数还在持续增加中。
+    </p>
+    <p class="text">
+        维正服务的几万名客户是我们过去努力付出和收获成绩的见证，也是维正不懈努力的力量之源。现有众多线下服务团队还在不断扩张中，傻鸟知服网又将综合线上线下服务优势，带来知识产权行业发展再次变革。
     </p>
 </section>
 
@@ -140,26 +143,27 @@
                 <strong class="tip">倾心打造四大核心业务</strong>
             </span>
         </figcaption>
-        <p>紧扣知识产权大时代背景，承载多年在知识产权领域的丰富经验，依托500+精英团队，打造专利、<br/>商标、版权、项目申报四大核心业务，旨于提升企业核心竞争力 </p>
+        <p>紧扣知识产权大时代背景，承载多年在知识产权领域的丰富经验，依托人才精英团队，打造专利、 商标、版权、项目申报、维权诉讼五大核心业务，旨于提升全天下企业的核心竞争力！
+        </p>
     </figure>
     
     <section class="container">
         <ul>
             <li>
                 <label>专利咨询</label>
-                <p>为客户提供专利咨询服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造更大的财富 </p>
+                <p>为客户提供专利服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造最大财富。</p>
             </li>
             <li>
                 <label>商标注册</label>
-                <p>线上线下相结合，为客户带去更优质专业的服务，以最终成果促进知识产权行业的再次变革。</p>
+                <p>线上线下相结合，为客户带去更专业的服务，以最终成果促进知识产权行业的再次变革。</p>
             </li>
             <li>
                 <label>版权登记</label>
-                <p>不管是版权登记、许可还是转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。 </p>
+                <p>不论版权登记、许可、转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。</p>
             </li>
             <li>
                 <label>项目申报</label>
-                <p>深入了企业的经营需求，在熟悉全国各省、市、区全部申报项目的基础上，以实力确保项目申报成功率。 </p>
+                <p>深入了解客户的经营发展需求，精准把握各省、市、区项目申报操作流程，以实力确保项目申报高成功率。 </p>
             </li>
         </ul>
     </section>
@@ -181,7 +185,8 @@
                     <strong class="tip">倾心打造四大核心业务</strong>
                 </span>
                 </figcaption>
-                <p>悉心调研分析各行特性，精准掌握数十个行业商业模式及业务流程闭环：高等教育系统、加工制造类、贸易进出口、 科技通讯、通信、现代制药、化工、食品、工程建设、电子商务。</p>
+                <p>悉心调研分析各行特性，精准掌握数高等教育系统、加工制造类、贸易进出口、 科技通讯、通信、现代制药、化工、食品、工程建设、电子商务等行业商业模式及业务流程闭环。
+                </p>
             </figure>
         </section>
     </section>
@@ -198,7 +203,8 @@
                     <strong class="tip">值得信任的实力</strong>
                 </span>
                 </figcaption>
-                <p>全国分公司<i>15</i>家，精英团队<i>1000+</i>，资深专业人员<i>680+</i>，经典客户案例<i>1000+</i>，项目实施满意度<i>98%</i>以上，<i>10300+</i>合作客户，具备全面、专业的咨询、服务能力。</p>
+                <p>维正集团致力于为全天下企业提供知识产权产业链式全方位服务，对行业我们始终肩负改革和创新的使命，对客户我们具备全面、专业的咨询、服务能力，对员工我们提供最具成长力的培养、晋升通道。
+                </p>
             </figure>
         </section>
         <section class="fr imgBox">
