--- a/src/html/foolishBird/index.html
+++ b/src/html/foolishBird/index.html
@@ -96,7 +96,7 @@
     <section class="container box">
         <header>
             <h2>线上商标业务</h2>
-            <strong>无须奔波足不出户<br/>一键办理</strong>
+            <strong>足不出户<br/>一键办理</strong>
         </header>
         <p>-维正集团旗下知识产权服务平台-</p>
         <section class="link">
