--- a/src/html/index.html
+++ b/src/html/index.html
@@ -99,13 +99,26 @@
 <!--SLIDE-->
 <section id="slider" class="slider">
     <ul>
-        <li><img class="sliderimg" src="../img/focusImg/slide3.png" alt=""></li>
-        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide4.png"
-                                                               alt=""></a></li>
-        <li><img class="sliderimg" src="../img/focusImg/slide2.png" alt=""></li>
-        <li><a href="http://www.fbips.cn" target="_blank"><img class="sliderimg" src="../img/focusImg/slide5.png"
-                                                               alt=""></a></li>
-        <li><img class="sliderimg" src="../img/focusImg/slide1.png" alt=""></li>
+        <li>
+            <a href="aboutUs/index.html">
+                <img class="sliderimg" src="../img/focusImg/slide1.jpg" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="http://www.fbips.cn" target="_blank">
+                <img class="sliderimg" src="../img/focusImg/slide2.jpg" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="http://www.fbips.cn" target="_blank">
+                <img class="sliderimg" src="../img/focusImg/slide3.jpg" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="aboutUs/index.html">
+                <img class="sliderimg" src="../img/focusImg/slide4.jpg" alt=""/>
+            </a>
+        </li>
     </ul>
 </section>
 
@@ -116,7 +129,7 @@
             <figcaption>
                 <h3>服务项目·精益求精</h3>
             </figcaption>
-            <p>为客户提供专利咨询服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造更大的财富 </p>
+            <p>做一家受人尊敬的百年企业！ </p>
         </figure>
         <section class="service-list">
             <ul class="clearfix">
@@ -126,7 +139,7 @@
                             <a href="servicePro/index.html" class="icon-Q" title="专利咨询"></a>
                         </span>
                         <strong>专利咨询</strong>
-                        <P>为客户提供专利咨询服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造更大的财富。</P>
+                        <P>为客户提供专利服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造最大财富。 </P>
                     </div>
                 </li>
                 <li>
@@ -135,7 +148,7 @@
                             <a href="servicePro/brandRegist.html" class="icon-C" title="商标注册"></a>
                         </span>
                         <strong>商标注册</strong>
-                        <p>线上线下相结合，为客户带去更优质专业的服务，以最终成果促进知识产权行业的再次变革。</p>
+                        <p>线上线下相结合，为客户带去更专业的服务，以最终成果促进知识产权行业的再次变革。</p>
                     </div>
                 </li>
                 <li>
@@ -144,7 +157,7 @@
                              <a href="servicePro/copyright.html" class="icon-P" title="版权登记"></a>
                         </span>
                         <strong>版权登记</strong>
-                        <p>不管是版权登记、许可还是转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。 </p>
+                        <p>不论版权登记、许可、转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。 </p>
                     </div>
                 </li>
                 <li>
@@ -153,7 +166,7 @@
                             <a href="servicePro/projectApplication.html" class="icon-E" title="项目申报"></a>
                         </span>
                         <strong>项目申报</strong>
-                        <P>深入了企业的经营需求，在熟悉全国各省、市、区全部申报项目的基础上，以实力确保项目申报成功率。 </P>
+                        <P>深入了解客户的经营发展需求，精准把握各省、市、区项目申报操作流程，以实力确保项目申报高成功率。 </P>
                     </div>
                 </li>
             </ul>
@@ -418,7 +431,7 @@
         <figcaption>
             <h3>成功案例·成就商业品牌</h3>
         </figcaption>
-        <p>您的眼光高度，决定您的品牌厚度</p>
+        <p>选择维正，就是选择您的品牌价值</p>
     </figure>
     <section class="project-list text-left">
         <ul>
@@ -720,7 +733,6 @@
     </section>
     <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
 </footer>
-
 
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 <script src="../js/plugins/unslider.min.js"></script>
