--- a/src/html/joinUs/idea.html
+++ b/src/html/joinUs/idea.html
@@ -123,7 +123,7 @@
         </span>
     </section>
     <p class="tip">
-        “千里马难寻，而伯乐常在”<br/> 你是千里马，我们就是伯乐，欢迎您加入维正知识产权！
+        “千里马难寻，而伯乐常在”<br/>你是千里马，我们就是伯乐，欢迎您加入维正集团！
     </p>
     <!-- Tab panes -->
     <div class="tab-content">
