--- a/src/html/servicePro/brandRegist.html
+++ b/src/html/servicePro/brandRegist.html
@@ -118,9 +118,9 @@
         <figure class="toTable">
             <figcaption>
                 商标项目服务
-                <strong>我们会“自始至终“的一直陪伴</strong>
+                <strong>始终如一的知识产权陪伴 </strong>
             </figcaption>
-            <p>公司现有专利代理人34名，多数具有对年学术研究经验，在专利稳健的撰写、无效程序以及侵权诉讼等方面具有丰富的经验：近百名专利 工程师，均为国家重点院校理工科专业出身，过硬的理论基础和事件经验。</p>
+            <p>线上线下相结合，为客户带去更专业的服务，以最终成果促进知识产权行业的再次变革。</p>
         </figure>
         <img src="../../img/earth2.png" alt="" class="earth">
     </section>
