--- a/src/html/servicePro/projectApplication.html
+++ b/src/html/servicePro/projectApplication.html
@@ -118,9 +118,9 @@
         <figure class="toTable">
             <figcaption>
                 项目申报
-                <strong>我们会“自始至终“的一直陪伴</strong>
+                <strong>始终如一的知识产权陪伴 </strong>
             </figcaption>
-            <p>公司现有专利代理人34名，多数具有对年学术研究经验，在专利稳健的撰写、无效程序以及侵权诉讼等方面具有丰富的经验：近百名专利 工程师，均为国家重点院校理工科专业出身，过硬的理论基础和事件经验。</p>
+            <p>深入了解客户的经营发展需求，精准把握各省、市、区项目申报操作流程，以实力确保项目申报高成功率。</p>
         </figure>
         <img src="../../img/earth4.png" alt="" class="earth">
     </section>
@@ -162,7 +162,7 @@
     
     <!--国家高薪技术企业项目意义-->
     <section class="service-ads text-center">
-        <h3 class="f24">国家高薪技术企业项目意义</h3>
+        <h3 class="f24">国家高新技术企业项目意义</h3>
         <section class="container box2">
             <ol class="significance">
                 <li>
