--- a/src/html/aboutUs/wzCulture.html
+++ b/src/html/aboutUs/wzCulture.html
@@ -121,8 +121,7 @@
         <h3>文化</h3>
         <section class="text">
             <strong class="tip">全方位的知识产权战略服务</strong>
-            <p>
-                维正知识产权代理有限公司有着一群懂信任、重合作、永奋斗、常分享的有志青年，我们怀着为客户创造最大价值的真诚和永远不变的追求与信仰，坚持不懈的拓展、创新。我们从不曾放慢脚步，激情饱满、积极进取的态度是我们最好的承诺</p>
+            <p>维正集团有着一群重信任、善合作、永奋斗、懂分享的有志青年，我们怀着为客户创造最大价值的真诚和永远不变的追求与信仰，坚持不懈追求发展、创新。我们从不曾放慢脚步，激情饱满、积极进取的态度是我们最好的承诺！</p>
         </section>
     </section>
 </section>
@@ -134,18 +133,18 @@
         <tr>
             <td><img src="../../img/culture1.png" alt=""></td>
             <td>
-                <section><label>维正的诚信</label>
-                    <p>诚实正直、言出必践</p></section>
+                <section><label>维正使命</label>
+                    <p>提升全天下企业的核心竞争力！ </p></section>
             </td>
             <td><img src="../../img/culture2.png" alt=""></td>
             <td>
-                <section><label>维正的专业</label>
-                    <p>对专业知识和专业技能执着，精益求精</p></section>
+                <section><label>发展目标</label>
+                    <p>做全中国最专业的知识产权公司！</p></section>
             </td>
             <td><img src="../../img/culture3.png" alt=""></td>
             <td>
-                <section><label>维正的团队</label>
-                    <p>共享担当，平凡人做非平凡事</p></section>
+                <section><label>六大价值观</label>
+                    <p>诚信，执行，团队，专业，拼搏，客户第一 </p></section>
             </td>
         </tr>
         <tr>
@@ -160,8 +159,8 @@
             </td>
             <td><img src="../../img/culture5.png" alt=""></td>
             <td>
-                <section><label>客户第一</label>
-                    <p>站在客户的立场思考问题，最终达到甚至超越客户的期望</p></section>
+                <section><label>维正的愿景</label>
+                    <p>做一家受人尊敬的百年企业 </p></section>
             </td>
             <td><img src="../../img/culture6.png" alt=""></td>
         </tr>
@@ -172,9 +171,12 @@
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span></li>
+        <li><em class="icon-qq"></em><span><a target="_blank"
+                                              href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
+        </li>
         <li><em class="icon-tel"></em><span>400-6063708</span></li>
-        <li><em class="icon-wechat"></em><p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
+        <li><em class="icon-wechat"></em>
+            <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
@@ -219,9 +221,11 @@
     <section class="btm-contact">
         <ul>
             <li><a href="../foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
-            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a></li>
+            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
+            </li>
             <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
-            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span></li>
+            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span>
+            </li>
         </ul>
     </section>
     <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
