--- a/src/html/contactUs/index.html
+++ b/src/html/contactUs/index.html
@@ -96,8 +96,7 @@
     <section class="lt text">
         <h3>联系我们<span>Contact us</span></h3>
         <label>您好</label>
-        <p>感谢您来到维正集团官网，如果您对我们的业务有了解意向，请通过各分公司的电话来联系我们，<br/>
-            我们将尽快的回复您，并为您提供最真诚的服务，谢谢！</p>
+        <p>欢迎您来到维正集团官网，如您需要知识产权任何服务，欢迎致电400-606-3708， 我们将为您提供最专业、真诚的服务，谢谢！</p>
     </section>
     <figure class="rt qrcode">
         <figure>
