--- a/src/html/servicePro/copyright.html
+++ b/src/html/servicePro/copyright.html
@@ -117,9 +117,9 @@
         <figure class="toTable">
             <figcaption>
                 版权服务
-                <strong>我们会“自始至终“的一直陪伴</strong>
+                <strong>始终如一的知识产权陪伴 </strong>
             </figcaption>
-            <p>公司现有专利代理人34名，多数具有对年学术研究经验，在专利稳健的撰写、无效程序以及侵权诉讼等方面具有丰富的经验：近百名专利 工程师，均为国家重点院校理工科专业出身，过硬的理论基础和事件经验。</p>
+            <p>不论版权登记、许可、转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。</p>
         </figure>
         <img src="../../img/earth3.png" alt="" class="earth">
     </section>
