--- a/src/html/servicePro/index.html
+++ b/src/html/servicePro/index.html
@@ -116,9 +116,9 @@
         <figure class="toTable">
             <figcaption>
                 专利服务项目
-                <strong>我们会“自始至终“的一直陪伴</strong>
+                <strong>始终如一的知识产权陪伴</strong>
             </figcaption>
-            <p>公司现有专利代理人34名，多数具有对年学术研究经验，在专利稳健的撰写、无效程序以及侵权诉讼等方面具有丰富的经验：近百名专利 工程师，均为国家重点院校理工科专业出身，过硬的理论基础和事件经验。</p>
+            <p>为客户提供专利服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造最大财富。</p>
         </figure>
         <img src="../../img/earth1.png" alt="" class="earth">
     </section>
