改动“关于我们”页面排版交互

--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -72,7 +72,7 @@
                     <li><a href="../aboutUs/index.html">走进维正</a></li>
                     <li><a href="../aboutUs/wzCulture.html">维正文化</a></li>
                     <li><a href="../aboutUs/wzDevelopment.html">发展历程</a></li>
-                    <li><a href="../aboutUs/wzTeam.html">维正团队</a></li>
+                    <li><a href="wzTeam.html">维正团队</a></li>
                 </ul>
             </li>
             <li>
@@ -106,7 +106,7 @@
                 <li class="active"><a href="../aboutUs/index.html">走进维正</a></li>
                 <li><a href="../aboutUs/wzCulture.html">维正文化</a></li>
                 <li><a href="../aboutUs/wzDevelopment.html">发展历程</a></li>
-                <li><a href="../aboutUs/wzTeam.html">维正团队</a></li>
+                <li><a href="wzTeam.html">维正团队</a></li>
             </ul>
         </menu>
     </section>
@@ -252,7 +252,7 @@
             <dd><a href="../aboutUs/index.html">走进维正</a></dd>
             <dd><a href="../aboutUs/wzCulture.html">维正文化</a></dd>
             <dd><a href="../aboutUs/wzDevelopment.html">发展历程</a></dd>
-            <dd><a href="../aboutUs/wzTeam.html">维正团队</a></dd>
+            <dd><a href="wzTeam.html">维正团队</a></dd>
         </dl>
         <dl>
             <dt>诚聘英才</dt>
