--- a/src/html/aboutUs/wzTeam-1.html
+++ b/src/html/aboutUs/wzTeam-1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>关于我们-维正文化</title>
+    <title>关于我们-维正团队</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
 <!--Header -->
 <header id="header">
     <h1 id="logo">
@@ -26,7 +25,6 @@
             <ins>维正集团</ins>
         </a>
     </h1>
-    
     <nav id="navBar" class="navBar">
         <ul class="nav clearfix">
             <li>
@@ -106,77 +104,67 @@
         <menu class="tab fr">
             <ul>
                 <li><a href="../aboutUs/index.html">走进维正</a></li>
-                <li class="active"><a href="../aboutUs/wzCulture.html">维正文化</a></li>
+                <li><a href="../aboutUs/wzCulture.html">维正文化</a></li>
                 <li><a href="../aboutUs/wzDevelopment.html">发展历程</a></li>
-                <li><a href="wzTeam.html">维正团队</a></li>
+                <li class="active"><a href="wzTeam.html">维正团队</a></li>
             </ul>
         </menu>
     </section>
 </section>
 
-<!--Content-->
+<!--TextInfo-->
 <section class="aboutUs-content container description-text">
     <section class="toTable box">
         <label><i>CULTURE</i>维正</label>
-        <h3>文化</h3>
+        <h3>团队</h3>
         <section class="text">
-            <strong class="tip">全方位的知识产权战略服务</strong>
-            <p> 维正集团有着一群重合作、永奋斗、常分享的有志青年，我们遵循唯一不变的是变化，永远不把挣钱作为第一目标，客户第一、员工第二、公司第三，不追求超额的利润、不追求暴力四项基本原则。把做全中国最专业的知识产权链公司作为发展目标，怀着做一家受人尊敬的百年企业的愿景，为客户创造最大价值的真诚和永远不变的追求与信仰，坚持不懈的拓展、创新。</p>
+            <strong class="tip">维正人的万种情怀</strong>
+            <p>
+                北京维正专利代理有限公司拥有一支稳健务实的管理团队，他们不但拥有丰富的行业经验及专业素质，更具有敏锐的市场意识以及卓越的管理能力！在他们的带领下，维正以领先业界的服务理念和全面创新的服务模式，秉承“提升全天下企业的核心竞争力”的伟大使命，引领知识产权服务发展方向，推进中国知识产权产业化不断发展前行。
+            </p>
         </section>
     </section>
 </section>
 
 
-<section class="container ourCulture-table">
-    <table cellpadding="0" cellspacing="0" width="100%">
-        <tbody>
-        <tr>
-            <td><img src="../../img/culture1.png" alt=""></td>
-            <td>
-                <section><label>维正使命</label>
-                    <p>提升全天下企业的核心竞争力！ </p></section>
-            </td>
-            <td><img src="../../img/culture2.png" alt=""></td>
-            <td>
-                <section><label>发展目标</label>
-                    <p>做全中国最专业的知识产权公司！</p></section>
-            </td>
-            <td><img src="../../img/culture3.png" alt=""></td>
-            <td>
-                <section><label>六大价值观</label>
-                    <p>诚信，执行，团队，专业，拼搏，客户第一 </p></section>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <section><label>维正的执行</label>
-                    <p>一流的计划加三流的执行永远比不上三流的计划加一流的执行</p></section>
-            </td>
-            <td><img src="../../img/culture4.png" alt=""></td>
-            <td>
-                <section><label>维正的拼搏</label>
-                    <p>不断自我激励、自我完善、寻求突破</p></section>
-            </td>
-            <td><img src="../../img/culture5.png" alt=""></td>
-            <td>
-                <section><label>维正的愿景</label>
-                    <p>做一家受人尊敬的百年企业 </p></section>
-            </td>
-            <td><img src="../../img/culture6.png" alt=""></td>
-        </tr>
-        </tbody>
-    </table>
+<!--Content-->
+<section id="team-show" class="container">
+    <ul>
+    
+    </ul>
 </section>
+
+<!--弹出面板-->
+<section id="team-pop-wrap">
+    <span id="close-btn"></span>
+    <section class="people-pic box">
+        <img src="" class="bigPic">
+    </section>
+    <section class="people-info box">
+        <h5 class="people-title">
+            <label></label>
+            <span></span>
+        </h5>
+        <p class="people-introduce">
+        </p>
+        <figure class="people-speak">
+            <figcaption class="f28">Ta在说</figcaption>
+            <p></p>
+        </figure>
+        <section class="pop-control">
+            <span class="prev" title="上一个"></span>
+            <span class="next" title="下一个"></span>
+        </section>
+    </section>
+</section>
+<section id="mask" class="hide"></section>
 
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"></em><span><a target="_blank"
-                                              href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
-        </li>
+        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span></li>
         <li><em class="icon-tel"></em><span>400-6063708</span></li>
-        <li><em class="icon-wechat"></em>
-            <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
+        <li><em class="icon-wechat"></em><p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
@@ -221,11 +209,9 @@
     <section class="btm-contact">
         <ul>
             <li><a href="../foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
-            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
-            </li>
+            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a></li>
             <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
-            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span>
-            </li>
+            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span></li>
         </ul>
     </section>
     <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
@@ -234,5 +220,6 @@
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 <script src="../../js/public.js"></script>
 <script src="../../js/common.js"></script>
+<script src="../../js/pages/wzTeam.js"></script>
 </body>
 </html>
