--- a/src/html/aboutUs/wzTeam.html
+++ b/src/html/aboutUs/wzTeam.html
@@ -128,43 +128,306 @@
 
 
 <!--Content-->
-<section id="team-show" class="container">
-    <ul>
-    
-    </ul>
-</section>
-
-<!--弹出面板-->
-<section id="team-pop-wrap">
-    <span id="close-btn"></span>
-    <section class="people-pic box">
-        <img src="" class="bigPic">
+<section class="team-pic-wrap">
+    <section id="team-pic-wall" class="slider">
+        <ul>
+            <li>
+                <section class="img" user-pic="A1">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text" user-name="A1">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img" user-pic="A2">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text" user-name="A2">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img" user-pic="A4">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text arr-btm">
+                    <label>xiaxiaxia储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text arr-top">
+                    <label>上储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊放假啊是发酵粉啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text arr-left" user-name="A4">
+                    <label>zuo储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text arr-right">
+                    <label>youoyou储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+            </li>
+            <li>
+                <section class="img" user-pic="aaaA1">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text" user-name="aaaA1">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img" user-pic="A2">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text" user-name="A2">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img" user-pic="A4zzz">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text arr-btm">
+                    <label>xiaxiaxia储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text arr-top">
+                    <label>上储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊放假啊是发酵粉啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text arr-left" user-name="A4zzz">
+                    <label>zuo储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text arr-right">
+                    <label>youoyou储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+                <section class="text">
+                    <label>储备大区总监</label>
+                    <p>打飞机啊疯了啊放假啊放假啊是发酵粉发</p>
+                    <i>——陈光标</i>
+                </section>
+                <section class="img">
+                    <img src="../../img/aboutUs-1.png" alt="" class="response-img">
+                </section>
+            </li>
+        </ul>
     </section>
-    <section class="people-info box">
-        <h5 class="people-title">
-            <label></label>
-            <span></span>
-        </h5>
-        <p class="people-introduce">
-        </p>
-        <figure class="people-speak">
-            <figcaption class="f28">Ta在说</figcaption>
-            <p></p>
-        </figure>
-        <section class="pop-control">
-            <span class="prev" title="上一个"></span>
-            <span class="next" title="下一个"></span>
-        </section>
-    </section>
+    <span class="arrow prev"></span>
+    <span class="arrow next"></span>
 </section>
-<section id="mask" class="hide"></section>
 
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span></li>
+        <li><em class="icon-qq"></em><span><a target="_blank"
+                                              href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
+        </li>
         <li><em class="icon-tel"></em><span>400-6063708</span></li>
-        <li><em class="icon-wechat"></em><p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
+        <li><em class="icon-wechat"></em>
+            <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
@@ -209,15 +472,18 @@
     <section class="btm-contact">
         <ul>
             <li><a href="../foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
-            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a></li>
+            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
+            </li>
             <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
-            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span></li>
+            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span>
+            </li>
         </ul>
     </section>
     <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
 </footer>
 
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+<script src="../../js/plugins/unslider.min.js"></script>
 <script src="../../js/public.js"></script>
 <script src="../../js/common.js"></script>
 <script src="../../js/pages/wzTeam.js"></script>
